fix z-index issue

--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -500,6 +500,7 @@
     align-items: center;
     justify-content: center;
     color: $color--gray;
+    z-index: 2;
 
     &.m-terminal {
       background-color: black;
